<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



    <TextView android:text="@string/title"
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        style="@style/title"
        android:fillViewport="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/lineal"
            android:layout_centerHorizontal="true"
            android:gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">



            <Button
                android:id="@+id/button0"
                android:background="@drawable/button_udacity"
                style="@style/button_text"
                android:text="@string/button0"
                android:onClick="button0lick"
                />
            <Button
                android:id="@+id/button1"
                android:background="@drawable/button_udacity"
                style="@style/button_text"
                android:text="@string/button1"
                />
            <Button
                android:id="@+id/button2"
                android:background="@drawable/button_udacity"
                style="@style/button_text"
                android:text="@string/button2"
                />
            <Button
                android:id="@+id/button3"
                android:background="@drawable/button_udacity"
                style="@style/button_text"
                android:text="@string/button3"
                />

            <Button
                android:id="@+id/button4"
                android:background="@drawable/button_udacity"
                style="@style/button_text"
                android:text="@string/button4"
                />
            <Button
                android:id="@+id/button5"
                android:background="@drawable/button_red"
                style="@style/button_text"
                android:text="@string/button5"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
